tree-sitter-agentscript/grammar.js
    source_file: $ => repeat(choice(
      $.config_block,
      $.variables_block,
      $.system_block,
      $.start_agent_block,
      $.topic_block,
      $.connection_block,
      $.language_block,
      $.knowledge_block,
      $._newline,
    )),

    // =========================================================================
    // Config Block
    // =========================================================================
    topic_block: $ => seq(
      'topic',
      $.identifier,
      ':',
      $._indent,
      repeat(choice($.topic_entry, $._newline)),
      $._dedent,
    ),

    topic_entry: $ => choice(
      $.description_entry,
      $.system_block,
      $.reasoning_block,
      $.before_reasoning_block,
      $.after_reasoning_block,
      $.actions_block,
    ),

    // =========================================================================
    // Connection Block
    // =========================================================================
    reasoning_block: $ => seq(
      'reasoning',
      ':',
      $._indent,
      repeat(choice($.reasoning_entry, $._newline)),
      $._dedent,
    ),

    reasoning_entry: $ => choice(
      $.instructions_block,
      $.reasoning_actions_block,
    ),

    instructions_block: $ => choice(
      // Simple: instructions: "..."
      seq('instructions', ':', $.string),
      // Pipe-prefixed multiline text: instructions:|
      seq(
        'instructions',
        ':',
        '|',
        $._indent,
        repeat(choice($.plain_instruction_line, $._newline)),
        $._dedent,
      ),
      // Dynamic instructions: instructions:->
      seq(
        'instructions',
        ':',
        '->',
        $._indent,
        repeat(choice($.dynamic_instruction, $._newline)),
        $._dedent,
      ),
      // Static block (legacy)
      seq(
        'instructions',
        ':',
        $._indent,
        repeat(choice($.instruction_line, $._newline)),
        $._dedent,
      ),
    ),

    plain_instruction_line: $ => $.instruction_text,

    dynamic_instruction_line: $ => choice(
      $.string,
      seq('|', $.instruction_text_with_interpolation, optional($.instruction_continuation)),
      seq('-', $.instruction_text_with_interpolation, optional($.instruction_continuation)),
    ),

    // Continuation lines for multi-line instruction text
    // These are lines that are more indented than the | or - line
    dynamic_instruction: $ => choice(
      $.dynamic_instruction_line,
      $.if_instruction,
      $.run_statement,
      $.set_statement,
      $.transition_instruction,
    ),

    // Transition can appear as a statement in dynamic instructions
    transition_instruction: $ => seq(
      $.utils_transition,
      'to',
      $.reference,
    ),

    if_instruction: $ => seq(
      'if',
      $.expression,
      ':',
      $._indent,
      repeat(choice($.dynamic_instruction, $._newline)),
      $._dedent,
      optional($.else_instruction),
    ),

    instruction_text: $ => /[^\n]+/,

    // Interpolation syntax: {!expression}
    // interpolation_start is handled by external scanner to properly recognize {!
    interpolation: $ => seq(
      $.interpolation_start,
      $.expression,
      '}',
    ),

    // Instruction text that may contain interpolations
    // instruction_text_segment is handled by external scanner
    instruction_text_with_interpolation: $ => repeat1(choice(
      $.interpolation,
      $.instruction_text_segment,
    )),

    // =========================================================================
    // Reasoning Actions
    // =========================================================================
    reasoning_actions_block: $ => seq(
      'actions',
      ':',
      $._indent,
      repeat(choice($.reasoning_action, $._newline)),
      $._dedent,
    ),

    reasoning_action: $ => seq(
      field('name', $.identifier),
      ':',
      field('target', $.reasoning_target),
      optional(seq(
        $._indent,
        repeat(choice($.reasoning_action_entry, $._newline)),
        $._dedent,
      )),
    ),

    reasoning_target: $ => choice(
      // @utils.transition to @topic.name - must come before plain reference
      seq($.utils_transition, 'to', $.reference),
      // @utils.escalate
      $.utils_escalate,
      // @utils.setVariables
      $.utils_set_variables,
      // @topic.name - topic delegation (must come before plain reference)
      $.topic_reference,
      // Plain reference (e.g., @actions.something)
      $.reference,
    ),

    // Token-level patterns for utils functions
    utils_transition: $ => token('@utils.transition'),
    utils_escalate: $ => token('@utils.escalate'),
    utils_set_variables: $ => token('@utils.setVariables'),

    // Topic reference for topic delegation: @topic.name
    topic_reference: $ => token(seq('@topic.', /[a-zA-Z_][a-zA-Z0-9_]*/)),

    reasoning_action_entry: $ => choice(
      $.description_entry,
      $.with_clause,
      $.set_clause,
      $.run_clause,
      $.available_when_clause,
      $.if_clause,
      $.transition_clause,
    ),

    with_clause: $ => seq(
      'with',
      field('param', $.identifier),
      '=',
      field('value', $.expression),
    ),

    description_entry: $ => seq('description', ':', $.string),

    // =========================================================================
    // Types
    // =========================================================================
    expression: $ => choice(
      $.primary_expression,
      $.unary_expression,
      $.binary_expression,
      $.ternary_expression,
    ),

    primary_expression: $ => choice(
      $.string,
      $.number,
      $.boolean,
      $.none,
      $.reference,
      $.list,
      $.parenthesized_expression,
      $.property_access,
      $.index_access,
    ),

    reference: $ => token(seq(
      '@',
      /[a-zA-Z_][a-zA-Z0-9_]*/,
      repeat(seq('.', /[a-zA-Z_][a-zA-Z0-9_]*/)),
    )),

    // =========================================================================
    // Literals
    // =========================================================================
    string: $ => choice(
      $._double_quoted_string,
      $._single_quoted_string,
      $._triple_quoted_string,
    ),

    _double_quoted_string: $ => seq(
      '"',
      repeat(choice(
        /[^"\\]+/,
        $.escape_sequence,
      )),
      '"',
    ),

    _single_quoted_string: $ => seq(
      "'",
      repeat(choice(
        /[^'\\]+/,
        $.escape_sequence,
      )),
      "'",
    ),

    _triple_quoted_string: $ => seq(
      '"""',
      repeat(choice(
        /[^"]+/,
        /"[^"]/,
        /""[^"]/,
      )),
      '"""',
    ),

    identifier: $ => /[a-zA-Z_][a-zA-Z0-9_]*/,
